--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                                 <hr class="dropdown-divider">
                             </li>
                             <li><a class="dropdown-item" href="#">Аксессуар 1</a></li>
+                            <li><a class="dropdown-item" href="#">Аксессуар 3</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
