--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
                                 <hr class="dropdown-divider">
                             </li>
                             <li><a class="dropdown-item" href="#">Аксессуар 1</a></li>
+                            <li><a class="dropdown-item" href="#">Аксессуар 2</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">В разработке!</a>
+                        <a class="nav-link disabled">В разработке</a>
                     </li>
                 </ul>
                 <form class="d-flex">
